FinalProjectLPROG/LPROGProject/src/main/java/us1018/InterviewModel_2_updated.g4
grammar InterviewModel_2_updated;

// Define tokens
LPAREN   : '(' ;
RPAREN   : ')' ;
COMMA    : ',' ;
COLON    : ':' ;
ID       : [a-zA-Z]+ ;
INT      : [0-9]+ ;
STRING   : '"' ~["\r\n]* '"' ;

// Ignore spaces, tabs, and line breaks
WS       : [ \t\r\n]+ -> skip ;

// Define rules
plugin : 'InterviewModel' ID '(' interviewParams ')' ;

interviewParams : 'Title' COLON STRING
                 'Description' COLON STRING
                 'Questions' COLON questionList ;

questionList : LPAREN question (COMMA question)* RPAREN ;

question : LPAREN STRING LPAREN questionType COMMA INT RPAREN RPAREN COLON STRING ;

questionType : 'TrueFalse'
             | 'ShortTextAnswer'
             | 'SingleChoice'
             | 'MultipleChoice'
             | 'IntegerNumber'
             | 'DecimalNumber'
             | 'Date'
             | 'Time'
             | 'NumericScale' ;
